--- a/src/main/resources/templates/Buscador.html
+++ b/src/main/resources/templates/Buscador.html
@@ -10,12 +10,12 @@
   </head>
 
   <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-          <a class="navbar-brand" href="@{/}">
-            <img class="logo" src="@{logos/casacasa.png}" alt="">
+          <a class="navbar-brand">
+              <img src="logos/casacasa.png"  width="30" height="30" class="d-inline-block align-top">
           </a>
-          <a class="navbar-brand" href="#"></a>
+          <a class="navbar-brand" href="logos/casacasa.png"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
@@ -30,14 +30,14 @@
           </div>
       </div>
   </nav>
-    <form action="/proveedor/buscador" method="get">
+ <!-- <form action="/proveedor/buscador" method="get">
         <h1>Buscador de Proveedores por Rubro</h1>
         <label for="rubro">Rubro:</label>
         <input type="text" id="rubro" name="rubro" required>
         <button type="submit">Buscar</button>
     </form>
     <div id="resultado">
-        <!-- Mostrar los resultados de la búsqueda -->
+         Mostrar los resultados de la búsqueda 
         <ul>
             <th:block th:each="proveedor : ${proveedores}">
                 <li>
@@ -47,17 +47,118 @@
                 </li>
             </th:block>
         </ul>
-    </div>
+    </div> -->
 
-    <div class="imagen-enmarcada">
-        <img src="https://pic.52112.com/180603/JPG-180603_376/z8rcPckn7v_small.jpg" alt="Descripción de la imagen">
-    </div>
+    <div class="container">
+      <div class="row justify-content-center">
+          <div class="col-md-8">
+              <h1 class="text-center">Nuestros Servicios</h1>
+          </div>
+      </div>
+      <div class="row justify-content-center">
+        <form action="/proveedor/buscador" method="get">
+          <div class="col-md-8">
+              <select class="form-control" id="servicio">
+                  <option value=""> Seleccionar el servicio que estas buscando </option>
+                  <option value="electricista">Electricista</option>
+                  <option value="plomero">Plomero</option>
+                  <option value="pintor">Pintor</option>
+                  <option value="albañil">Albañil</option>
+                  <option value="jardinero">Jardinero</option>
+                  <option value="Construccion" >Construccion</option>
+                  <option value="Electricita">Electricidad</option>
+                  <option value="Plomeria">Plomeria</option>
+                  <option value="Cerrajeria">Cerrajeria</option>
+                  <option value="Vidrieria">Vidrieria</option>
+                  <option value="Parquizacion">Parquizacion</option>
+                  <option value="Piscina">Piscina</option>
+                  <option value="Limpieza">Limpieza</option>
+              </select>
+            </div>
+            <button type="submit">Buscar</button>
+          </form>
+      </div>
+  </div>
+
+  <br>
+
+  <div class="containerB">
+      <div class="row">
+          <div class="col-md-4">
+              <div class="card">
+                  <img src="imagenes/proveedor1.jpg" class="card-img-top" alt="Proveedor 1">
+                  <div class="card-body">
+                      <h5 class="card-title">Proveedor 1</h5>
+                      <p class="card-text">Cantidad de estrellas: 5</p>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-md-4">
+              <div class="card">
+                  <img src="imagenes/proveedor2.jpg" class="card-img-top" alt="Proveedor 2">
+                  <div class="card-body">
+                      <h5 class="card-title">Proveedor 2</h5>
+                      <p class="card-text">Cantidad de estrellas: 4</p>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-md-4">
+              <div class="card">
+                  <img src="imagenes/proveedor3.jpg" class="card-img-top" alt="Proveedor 3">
+                  <div class="card-body">
+                      <h5 class="card-title">Proveedor 3</h5>
+                      <p class="card-text">Cantidad de estrellas: 3</p>
+                  </div>
+              </div>
+          </div>
+
+          <br>
+
+          <div class="col-md-4">
+              <div class="card">
+                  <img src="imagenes/proveedor4.jpg" class="card-img-top" alt="Proveedor 3">
+                  <div class="card-body">
+                      <h5 class="card-title">Proveedor 4</h5>
+                      <p class="card-text">Cantidad de estrellas: 3</p>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-md-4">
+              <div class="card">
+                  <img src="imagenes/proveedor4.jpg" class="card-img-top" alt="Proveedor 3">
+                  <div class="card-body">
+                      <h5 class="card-title">Proveedor 4</h5>
+                      <p class="card-text">Cantidad de estrellas: 3</p>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-md-4">
+              <div class="card">
+                  <img src="imagenes/proveedor4.jpg" class="card-img-top" alt="Proveedor 3">
+                  <div class="card-body">
+                      <h5 class="card-title">Proveedor 4</h5>
+                      <p class="card-text">Cantidad de estrellas: 3</p>
+                  </div>
+              </div>
+          </div>
+
+      </div>
+  </div>
+
+
+
+
+
 
 
 <section class="text-center container">
   <div class="row mt-3">
       <div class="divVolver">
-          <a th:href="@{/}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+          <a th:href="@{/proveedor/buscador}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
       </div>
   </div>
 </section>
