--- a/src/main/resources/static/css/estilos2.css
+++ b/src/main/resources/static/css/estilos2.css
@@ -236,7 +236,13 @@ h3{
 /*buscar proveedor*/
 .botonBus{
   
-  margin-left: 70%;
+  margin-left: 50%;
+}
+
+#servicio{
+  display: flex;
+  margin-top: 5%;
+  margin-left: 30%;
 }
 
 /*registro usuario*/
@@ -295,6 +301,11 @@ h3{
    width:20%;
    
   }
+
+  #servicio{
+    margin-left:20% ;
+    width:66% ;
+}
 }
 
 @media screen and (max-width: 991px){
