--- a/src/main/resources/templates/Buscador.html
+++ b/src/main/resources/templates/Buscador.html
@@ -60,7 +60,7 @@
         <form action="/proveedor/buscador" method="get">
           <div class="col-md-8">
               <select class="form-control" id="servicio">
-                  <option value=""> Seleccionar el servicio que estas buscando </option>
+                  <option value=""> Seleccionar el servicio a buscar </option>
                   <option value="electricista">Electricista</option>
                   <option value="plomero">Plomero</option>
                   <option value="pintor">Pintor</option>
