--- a/src/main/resources/templates/Buscador.html
+++ b/src/main/resources/templates/Buscador.html
@@ -1,34 +1,46 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Buscador de Proveedores</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="" type="image/x-icon">
+    <title>ProSkillFinder</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/estilos2.css}">
 </head>
 
 <body>
-    <div class="container1">
-        <header class="encabezado">
-            <a name="arriba"><img id="logo" src="logos/logo1.png" alt="logo" /></a>
-
-            <nav id="navbar">
-                <ul>
-                    <li><a href="/">Inicio</a></li>
-
-                </ul>
-            </nav>
-        </header>
-    </div>
-
-    <form action="/proveedor/buscador" method="get">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand">
+                <img src="logos/casacasa.png" width="30" height="30" class="d-inline-block align-top">
+            </a>
+            <a class="navbar-brand" href="logos/casacasa.png"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" href="/">Inicio</a>
+                    <a class="nav-link" href="/proveedor/buscador">Buscar</a>
+                    <!-- <a class="nav-link" href="/registrar">RegUsuario</a>
+        <a class="nav-link" href="/proveedor/registrar">RegProv</a>-->
+                    <a class="nav-link" href="/login">Login</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- <form action="/proveedor/buscador" method="get">
         <h1>Buscador de Proveedores por Rubro</h1>
         <label for="rubro">Rubro:</label>
-        <input type="text" id="rubro" name="rubro" required />
+        <input type="text" id="rubro" name="rubro" required>
         <button type="submit">Buscar</button>
     </form>
     <div id="resultado">
-        <!-- Mostrar los resultados de la búsqueda -->
+         Mostrar los resultados de la búsqueda 
         <ul>
             <th:block th:each="proveedor : ${proveedores}">
                 <li>
@@ -38,7 +50,111 @@
                 </li>
             </th:block>
         </ul>
-    </div>
-</body>
+    </div> -->
 
-</html>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <h1 class="text-center">Nuestros Servicios</h1>
+            </div>
+        </div>
+        <!--ver si esta bien conectado a la base de datos el form-->
+        <div class="row justify-content-center">
+            <form action="/proveedor/buscador" method="get">
+                <div class="col-md-8">
+                    <select class="form-control" id="servicio">
+                        <option value=""> Seleccionar el servicio a buscar </option>
+                        <option value="electricista">Electricista</option>
+                        <option value="plomero">Plomero</option>
+                        <option value="pintor">Pintor</option>
+                        <option value="albañil">Albañil</option>
+                        <option value="jardinero">Jardinero</option>
+                        <option value="Construccion">Construccion</option>
+                        <option value="Electricita">Electricidad</option>
+                        <option value="Plomeria">Plomeria</option>
+                        <option value="Cerrajeria">Cerrajeria</option>
+                        <option value="Vidrieria">Vidrieria</option>
+                        <option value="Parquizacion">Parquizacion</option>
+                        <option value="Piscina">Piscina</option>
+                        <option value="Limpieza">Limpieza</option>
+                    </select>
+                </div>
+                <button type="submit" class="botonBus">Buscar</button>
+            </form>
+        </div>
+    </div>
+
+    <br>
+
+    <div class="containerB">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg"
+                        class="card-img-top" alt="Proveedor 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Proveedor 1</h5>
+                        <p class="card-text">Cantidad de estrellas: 5</p>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto3-150x150.jpg"
+                        class="card-img-top" alt="Proveedor 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Proveedor 2</h5>
+                        <p class="card-text">Cantidad de estrellas: 4</p>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg"
+                        class="card-img-top" alt="Proveedor 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Proveedor 3</h5>
+                        <p class="card-text">Cantidad de estrellas: 3</p>
+                    </div>
+                </div>
+            </div>
+
+            <h2></h2>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto3-150x150.jpg"
+                        class="card-img-top" alt="Proveedor 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Proveedor 4</h5>
+                        <p class="card-text">Cantidad de estrellas: 3</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg"
+                        class="card-img-top" alt="Proveedor 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Proveedor 4</h5>
+                        <p class="card-text">Cantidad de estrellas: 3</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg"
+                        class="card-img-top" alt="Proveedor 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Proveedor 4</h5>
+                        <p class="card-text">Cantidad de estrellas: 3</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
