--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,77 +1,105 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="/logos/logo.png" type="image/x-icon" />
-  <link rel="stylesheet" href="css/estilos.css" />
-  <title>Servicios</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ProSkillFinder</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/estilos2.css">
 </head>
 
 <body>
-  <div class="container1">
-    <header class="encabezado">
-      <a name="arriba"><img id="logo" src="logos/logo1.png" alt="logo" /></a>
 
-      <nav id="navbar">
-        <ul>
-          <li><a href="/">Inicio</a></li>
-          <li><a href="/proveedor/buscador">Servicios</a></li>
-          <li><a href="/registrar">Registrate</a></li>
-          <li><a href="/proveedor/registrar">Registro Proveedor</a></li>
-          <li><a href="/login">Login</a></li>
-        </ul>
-      </nav>
-    </header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand">
+        <img src="logos/casacasa.png" width="30" height="30" class="d-inline-block align-top">
+      </a>
+      <a class="navbar-brand" href="logos/casacasa.png"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" href="/">Inicio</a>
+          <a class="nav-link" href="/proveedor/buscador">Buscar</a>
+          <!-- <a class="nav-link" href="/registrar">RegUsuario</a>
+            <a class="nav-link" href="/proveedor/registrar">RegProv</a>-->
+          <a class="nav-link" href="/login">Login</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <h1>ProSkillFinder</h1>
+
+  <h3>¿Necesitas una mano de confianza para mantener tu hogar en óptimas condiciones?
+    <!--<br> Nosotros estamos listos para ayudarte, contamos con una amplia gama de servicios generales.-->
+  </h3>
+
+  <div class="transicion">
+    <ul>
+      <li>
+        <h5><!--¿Necesitas una mano de confianza para mantener tu hogar en óptimas condiciones? -->
+          <br> Nosotros estamos listos para ayudarte, contamos con una amplia gama de servicios generales.
+        </h5>
+        <img src="img/paisajista.jpg" alt="Albañil">
+      </li>
+      <li>
+        <img src="img/electricidad.jpg" alt="Electricista">
+      </li>
+      <li>
+        <img src="img/limpiapiscina.jpg" alt="Piletero">
+      </li>
+      <li>
+        <img src="img/limpieza.jpg" alt="Limpieza">
+      </li>
+      <li>
+        <img src="img/paisajista.jpg" alt="Paisajista">
+      </li>
+      <li>
+        <img src="img/parquista.jpg" alt="Parquista">
+      </li>
+      <li>
+        <img src="img/plomero.jpg" alt="Plomero">
+      </li>
+      <li>
+        <img src="img/techista.jpg" alt="Techista">
+      </li>
+    </ul>
+  </div>
+  <div class="button-container">
+    <a href="/conocenos" class="button">Conocenos</a>
+    <a href="/login" class="button">Conectate!</a>
   </div>
 
-  <h2 class="encabezado1">Servicios</h2>
-  <div class="container">
-    <div class="mySlides">
-      <img src="img/albañil.jpg" alt="" />
+  <section class="text-center container">
+    <div class="row mt-3">
+      <div class="divVolver">
+        <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+      </div>
     </div>
+  </section>
 
-    <div class="mySlides">
-      <img src="img/parquista.jpg" alt="" />
-    </div>
-    <div class="mySlides">
-      <img src="img/techista.jpg" alt="" />
-    </div>
-    <div class="mySlides">
-      <img src="img/electricidad.jpg" alt="" />
-    </div>
-    <div class="mySlides">
-      <img src="img/limpiapiscina.jpg" alt="" />
-    </div>
-    <div class="mySlides">
-      <img src="img/paisajista.jpg" alt="" />
-    </div>
-    <div class="mySlides">
-      <img src="img/limpieza.jpg" alt="" />
-    </div>
 
-    <div class="slider-controls">
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    </div>
-    <br />
-    <a class="arriba" href="#arriba">Ir arriba</a><br /><br />
-  </div>
-
-  <script src="js/main.js"></script>
 
   <footer class="pie">
     <div class="texto-pie">
       <p>ubicacion - chacras de coria -Mendoza</p>
     </div>
     <div class="redes-sociales">
-      <a href="https://www.facebook.com/" target="_blank"><img src="logos/facebook.png" alt="Facebook" /></a>
-      <a href="https://www.instagram.com/" target="_blank"><img src="logos/instagram.png" alt="Instagram" /></a>
-      <a href="https://twitter.com/" target="_blank"><img src="logos/twitter.png" alt="Twitter" /></a>
+      <a href="https://www.facebook.com/" target="_blank"><img src="logos/facebook.png" alt="Facebook"></a>
+      <a href="https://www.instagram.com/" target="_blank"><img src="logos/instagram.png" alt="Instagram"></a>
+      <a href="https://twitter.com/" target="_blank"><img src="logos/twitter.png" alt="Twitter"></a>
       <p></p>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
