--- a/src/main/resources/static/css/estilos2.css
+++ b/src/main/resources/static/css/estilos2.css
@@ -196,7 +196,8 @@ h3{
     width: 50%;
     padding: 20px;
     background-color: #000;
-    margin-right: 10px;
+    margin-right: 5%;
+    margin-left: 10%;
   }
   
   .right-side {
@@ -205,7 +206,8 @@ h3{
     padding: 14px;
     margin-bottom: 15px;
     background-color: #000;
-    margin-left: 10px; 
+    margin-left: 5%; 
+    margin-right: 10%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -217,9 +219,10 @@ h3{
   
   #botonr {
     display:flex;
-    margin: 10px;
+    margin: 10%;
     border-radius: 5px;
     background:linear-gradient(90deg, rgb(125, 45, 245) 0%, rgb(111, 111, 226) 100%);
+    
   }
   
   #botonr:hover {
@@ -249,6 +252,9 @@ h3{
   .textobox{
     color: white;
   }
+
+
+
 /*
   .textlog{
     margin:10px;
