--- a/src/main/resources/static/css/estilos2.css
+++ b/src/main/resources/static/css/estilos2.css
@@ -406,6 +406,11 @@ textarea {
   height: auto;
 }
 
+.textbusq{
+  margin-top: 50px;
+  text-align: center;
+  font-size: 30px;
+}
 
 .imagen-prov img {
   width: 20%;
@@ -413,37 +418,57 @@ textarea {
 }
 
 .botonbus {
-  margin-left: 57%;
+  color: white;
+  margin-left: 70%;
   border-radius: 5px;
   border: 1px solid #000;
-  width: 7%;
+  width: 10%;
+  background: linear-gradient(90deg, rgb(125, 45, 245) 0%, rgb(111, 111, 226) 100%);
 }
+.botonbus:hover{
+  color: red;
+}
+
 
 .seleb {
   display: flex;
-  margin-top: 5%;
-  margin-left: 50%;
+  margin-top: 1%;
   width: 50%;
+  margin-left: 50%;
   border-radius: 5px;
-  height: 200%;
-}
-.card {
-  margin: 10px;}
-
-.card-deck {
-    display: flex;
-
+  height: 35%;
 }
 
+.col-md-4{
+display: inline-block;
+margin: 0;
+width: 25%; 
+margin: 3%;
+
+}
+#contac, #regist{
+  width: 50%;
+  height: auto;
+  margin-left: 10px;
+}
+
+#textbien{
+ width: 15%;
+ border-radius: 5px;
+ background-color:  rgba(0, 0, 0, 0.3);
+ color: white;
+ font-weight: bold;
+ text-align: center;
+}
 
 /*  Contactar Proveedor */
 
-
+/*
 .pantalla {
   display: flex;
 }
 
-/* Estilo para la columna izquierda (1/3 de ancho), foto perfil y datos provedor*/
+/* Estilo para la columna izquierda (1/3 de ancho), foto perfil y datos provedor*//*
 .izquierda {
   flex: 1;
   padding: 20px;
@@ -465,13 +490,13 @@ textarea {
 
 }
 
-/* Estilo para la columna derecha (2/3 de ancho) */
+/* Estilo para la columna derecha (2/3 de ancho) *//*
 .derecha {
   flex: 2;
   padding: 20px;
 }
 
-/* Estilo para la sección de fotos de trabajos realizados */
+/* Estilo para la sección de fotos de trabajos realizados *//*
 .fotoTrabajo {
   text-align: center; 
 }
@@ -486,7 +511,7 @@ textarea {
   margin-right: 10px;
 }
 
-/* Estilo para el campo de comentario y botón de enviar */
+/* Estilo para el campo de comentario y botón de enviar *//*
 
 .comentario {
   width: 100%;
@@ -506,7 +531,7 @@ textarea {
   width: 20%;
 }
 
-/* Estilo para la columna derecha (Orden de Trabajo) */
+/* Estilo para la columna derecha (Orden de Trabajo) *//*
 .encabezadoCP {
   margin-bottom: 40px;
   display: flex;
@@ -529,7 +554,7 @@ textarea {
   box-sizing: border-box;/
 }
 
-/* Estilo para el campo de comentario en la Orden de Trabajo */
+/* Estilo para el campo de comentario en la Orden de Trabajo *//*
 .form-control {
   width: 100%;
   padding: 10px;
@@ -538,7 +563,7 @@ textarea {
 }
 
 
-/* Estilo para el botón de enviar en la Orden de Trabajo */
+/* Estilo para el botón de enviar en la Orden de Trabajo *//*
 .btn-primary {
   background-color: #007bff;
   color: #fff;
@@ -548,7 +573,7 @@ textarea {
   cursor: pointer;
   width: 30%;
 
-}
+}*/
 
 /* Media query para pantallas más pequeñas */
 @media screen and (max-width: 768px) {
@@ -595,7 +620,32 @@ textarea {
     flex: 0 0 calc(50% - 1rem);
     max-width: calc(50% - 1rem);
 }
+
+.seleb{
+  margin-left: 25%;
 }
+
+.botonbus{
+ margin-left: 45%;
+ width: 10%;
+}
+
+#textbien{
+  width: 30%;
+  border-radius: 5px;
+  background-color:  rgba(0, 0, 0, 0.3);
+  color: white;
+  font-weight: bold;
+  text-align: center;
+
+}
+
+.regUsuario {
+  margin-left: 15%;
+  width: 70%;
+}
+
+
 }
 
 @media screen and (max-width: 991px) {
@@ -623,4 +673,24 @@ textarea {
     height: 70%;
   
   }
+  
+.seleb{
+  margin-left: 25%;
+}
+
+.botonbus{
+ margin-left: 45%;
+ width: 10%;
+}
+
+#textbien{
+  width: 30%;
+  border-radius: 5px;
+  background-color:  rgba(0, 0, 0, 0.3);
+  color: white;
+  font-weight: bold;
+  text-align: center;
+
+}
+
 }
