--- a/src/main/resources/templates/Buscador.html
+++ b/src/main/resources/templates/Buscador.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"  lang="es" >
+
 
 <head>
     <meta charset="UTF-8">
@@ -26,16 +26,14 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" href="/">Inicio</a>
                     <a class="nav-link" href="/proveedor/buscador">Buscar</a>
+
                     <a class="nav-link" href="/login">Login</a>
 
                     <ul  th:if="${session.personasession != null}">
-                    
-                    
+
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-                        sec:authorize="hasRole('USER')" th:href="@{/usuario}" > Perfil </a>
-                            
-                        
+                         > Perfil </a>
 
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" th:href="@{/perfilUsuario}" >Editar mi Perfil</a></li>
@@ -44,7 +42,7 @@
                             <li><a class="dropdown-item" href="/logout" >Cerrar Sesión</a></li>
                         </ul>
                     </li>
-                    
+
                 </ul>
                 </div>
             </div>
@@ -55,12 +53,21 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
-                <h1 class="text-center">Nuestros Servicios</h1>
+                <h1 class="text-center">ProSkillFinder</h1>
+                <h5 class="textbusq">Busqueda de Proveedor</h5>
             </div>
         </div>
     </div>
-    
-    
+
+    <div class="col-md-4" id="textbien">
+        <div class="container">
+
+            <span
+              th:if="${session.personasession != null}"
+              th:text=" 'BIENVENIDO/A ' + ${ session.personasession.nombre }  "
+            ></span>
+        </div>
+      </div>
     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
         <li><a class="dropdown-item" th:href="@{/perfilUsuario}" >Editar Perfil</a></li>
         <li><hr class="dropdown-divider"></li>
@@ -86,41 +93,45 @@
     </div>
 
     <div class="card-deck" id="resultado">
-        <ul>
+
             <th:block th:each="proveedor : ${proveedores}">
                 <div class="col-md-4">
-                    <div class="card" style="background-color: #000; width: 300px;">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzhK86EovE1pAkcsj0G7ptzdV5-Cs35zSWnA&usqp=CAU" class="card-img-top" alt="Proveedor 1">
-                        <div class="card-body" >
-                            <h5 style="font-weight: bold; color: white;">Nombre:  <span class="card-text" th:text="${proveedor.nombre}"></span></h5>
-                            <h5 class="card-text" style="color: white;">Cantidad de estrellas:  5</h5>
-                            <a th:href="@{/orden/contacto/__${proveedor.id}__}" class="btn btn-primary"
+                    <div class="card custom-card" >
+                        <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg"
+                            class="card-img-top" alt="Proveedor 1">
+                        <div class="card-body">
+                            <h5 th:text="${proveedor.nombre}">nombre:</h5>
+                            <p class="card-text">Cantidad de estrellas: 5</p>
+
+                            <a th:href="@{/orden/contacto/__${proveedor.id}__}" class="btn btn-primary" id="contac"
                                th:if="${session.personasession != null}"
                                 style="margin:10px">Contactar</a>
 
-                                <a th:href="@{/login}" class="btn btn-primary"
+                                <a th:href="@{/login}" class="btn btn-primary" id="regist"
                                th:if="${session.personasession == null}"
                                 style="margin:10px">Registrate</a>
                         </div>
                     </div>
                 </div>
             </th:block>
-        </ul>
+        
     </div>
 
 
     <div class="row justify-content-center" th:if="${#lists.isEmpty(proveedores)}">
         <div class="col-md-4">
-            <div class="card" style="background-color: #000; height: 62px;">
+            <div class="card" style="background-color: #000; height: auto;">
                 <div class="card-body">
-                    <p class="row justify-content-center" style="font-weight: bold; color: white;">No se encontraron proveedores para este rubro</p>
+                    <p class="row justify-content-center" style="font-weight: bold; color: white;">
+                    No se encontraron proveedores para este rubro</p>
                 </div>
             </div>
         </div>
     </div>
+
     <br>
 
-    <div class="imagen-enmarcada" th:if="${#lists.isEmpty(proveedores)}" >
+    <div class="imagen-enmarcada" th:if="${#lists.isEmpty(proveedores)}">
         <img src="https://pic.52112.com/180603/JPG-180603_376/z8rcPckn7v_small.jpg" alt="Descripción de la imagen">
     </div>
 
@@ -136,6 +147,7 @@
         <div th:replace="fragments/footer::foot"></div>
         <div th:replace="fragments/redesS::red_soc"></div>
     </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
